--- a/examples/quickstart/pom.xml
+++ b/examples/quickstart/pom.xml
@@ -60,13 +60,8 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
+                <version>1.3.2</version>
                 <executions>
-                    <execution>
-                        <id>copy to swagger</id>
-                        <configuration>
-                            <skip>true</skip>
-                        </configuration>
-                    </execution>
                     <execution>
                         <goals>
                             <goal>java</goal>
