--- a/src/swagger/api.yaml
+++ b/src/swagger/api.yaml
@@ -2266,6 +2266,7 @@ paths:
                   secretKey: xxxxxxxxxxx
                   siteKey: xxxxxxxxxxx
                   type: HCAPTCHA
+        required: true
         description: ''
       tags:
       - CAPTCHA
@@ -2369,6 +2370,7 @@ paths:
                   name: myHCaptcha
                   siteKey: xxxxxxxxxxx
                   type: HCAPTCHA
+        required: true
         description: ''
       tags:
       - CAPTCHA
@@ -9492,6 +9494,9 @@ components:
             self:
               $ref: '#/components/schemas/hrefObject'
           readOnly: true
+      x-okta-operations:
+      - alias: update
+        operationId: updateCaptchaInstance
       x-okta-tags:
       - CAPTCHA
     EnabledStatus:
