updated yaml to add return type for activate and deactivate authenticators

--- a/src/swagger/api.yaml
+++ b/src/swagger/api.yaml
@@ -1089,6 +1089,8 @@ paths:
       responses:
         '200':
           description: Success
+          schema:
+            $ref: '#/definitions/Authenticator'
       security:
         - api_token: [ ]
       tags:
@@ -1109,6 +1111,8 @@ paths:
       responses:
         '200':
           description: Success
+          schema:
+            $ref: '#/definitions/Authenticator'
       security:
         - api_token: [ ]
       tags:
