Okta 347728 fetch openapi from npm (#628)
* Addressing spec inconsistencies with openAPI repo spec (v2.5.0) (#607)

openAPI spec v2.5.0

* OKTA-347728: Fetch and use Open API spec from npm

* OKTA-347728: Fetch and use Open API spec from npm

* OKTA-347728: Fetch and use Open API spec from npm

* OKTA-347728: update to version 2.5.0

* OKTA-347728: Fetch and use Open API spec from npm

* OKTA-347728: Fetch and use Open API spec from npm

* OKTA-347728: Fetch and use Open API spec from npm

* OKTA-347728: update to version 2.6.0

* OKTA-347728: add skip option

* OKTA-347728: add skip option

* OKTA-347728: break build on binary incompatible modifications

* OKTA-347728: temporary change to make a successful build

* OKTA-347728: remove plugin from impl module

* OKTA-347728: exclude api.yaml from this repository

* OKTA-347728: update version to 2.7.0

* OKTA-347728: add 'mkdir swagger'

* OKTA-347728: correct sh command

* OKTA-347728: update package.json

* OKTA-347728: set openapi version to 2.6.0

* set version to 6.0.0 and set breakBuildOnBinaryIncompatibleModifications to false

* Update .gitignore

Co-authored-by: Arvind Krishnakumar <61501885+arvindkrishnakumar-okta@users.noreply.github.com>

Co-authored-by: sergiishamrai-okta <71881713+sergiishamrai-okta@users.noreply.github.com>
Co-authored-by: Arvind Krishnakumar <arvind.krishnakumar@okta.com>
Co-authored-by: Arvind Krishnakumar <61501885+arvindkrishnakumar-okta@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,6 @@ npm-debug.log
 travis_phantomjs
 .DS_Store
 .vscode
+
+# api.yaml will be fetched from NPM, the local copy will not be used.
+src/swagger/api.yaml
