Add a BOM for easier dependency management
To allow for easier managing of dependencies for consumers of the Okta
SDK, we can introduce a Bill of Materials (BOM).

--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,7 @@
         <module>integration-tests</module>
         <module>examples</module>
         <module>coverage</module>
+        <module>bom</module>
     </modules>
 
     <dependencyManagement>
