x-okta-known-values support

--- a/src/swagger/api.yaml
+++ b/src/swagger/api.yaml
@@ -10862,7 +10862,7 @@ components:
           - INACTIVE
         type:
           type: string
-          enum:
+          x-okta-known-values:
           - SAML2
           - GOOGLE
           - FACEBOOK
