--- a/src/swagger/api.yaml
+++ b/src/swagger/api.yaml
@@ -293,63 +293,63 @@ paths:
           content: {}
       security:
       - api_token: []
-  /api/v1/apps/{appId}/credentials/csrs/{csrId}/lifecycle/publish:
-    post:
-      tags:
-      - Application
-      summary: Publish Certificate Signing Request
-      description: Updates a certificate signing request for the app with a signed X.509 certificate and adds it into the application key credentials
-      operationId: publishCsrFromApplication
-      parameters:
-      - name: appId
-        in: path
-        required: true
-        schema:
-          type: string
-      - name: csrId
-        in: path
-        required: true
-        schema:
-          type: string
-      requestBody:
-        required: true
-        content:
-          application/octet-stream:
-            schema:
-              type: string
-              format: binary
-          application/x-x509-ca-cert:
-            schema:
-              oneOf:
-              - type: string
-                format: binary
-                x-okta-operationId: publishBinaryCerCert
-              - type: string
-                format: base64
-                x-okta-operationId: publishBase64CerCert
-          application/pkix-cert:
-            schema:
-              oneOf:
-              - type: string
-                format: binary
-                x-okta-operationId: publishBinaryDerCert
-              - type: string
-                format: base64
-                x-okta-operationId: publishBase64DerCert
-          application/x-pem-file:
-            schema:
-              type: string
-              format: binary
-              x-okta-operationId: publishBinaryPemCert
-      responses:
-        '201':
-          description: Created
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/JsonWebKey'
-      security:
-      - api_token: []
+#  /api/v1/apps/{appId}/credentials/csrs/{csrId}/lifecycle/publish:
+#    post:
+#      tags:
+#      - Application
+#      summary: Publish Certificate Signing Request
+#      description: Updates a certificate signing request for the app with a signed X.509 certificate and adds it into the application key credentials
+#      operationId: publishCsrFromApplication
+#      parameters:
+#      - name: appId
+#        in: path
+#        required: true
+#        schema:
+#          type: string
+#      - name: csrId
+#        in: path
+#        required: true
+#        schema:
+#          type: string
+#      requestBody:
+#        required: true
+#        content:
+#          application/octet-stream:
+#            schema:
+#              type: string
+#              format: binary
+#          application/x-x509-ca-cert:
+#            schema:
+#              oneOf:
+#              - type: string
+#                format: binary
+#                x-okta-operationId: publishBinaryCerCert
+#              - type: string
+#                format: base64
+#                x-okta-operationId: publishBase64CerCert
+#          application/pkix-cert:
+#            schema:
+#              oneOf:
+#              - type: string
+#                format: binary
+#                x-okta-operationId: publishBinaryDerCert
+#              - type: string
+#                format: base64
+#                x-okta-operationId: publishBase64DerCert
+#          application/x-pem-file:
+#            schema:
+#              type: string
+#              format: binary
+#              x-okta-operationId: publishBinaryPemCert
+#      responses:
+#        '201':
+#          description: Created
+#          content:
+#            application/json:
+#              schema:
+#                $ref: '#/components/schemas/JsonWebKey'
+#      security:
+#      - api_token: []
   /api/v1/apps/{appId}/credentials/keys:
     get:
       tags:
@@ -3983,62 +3983,62 @@ paths:
           content: {}
       security:
       - api_token: []
-  /api/v1/idps/{idpId}/credentials/csrs/{csrId}/lifecycle/publish:
-    post:
-      tags:
-      - IdentityProvider
-      description: Update the Certificate Signing Request with a signed X.509 certificate and add it into the signing key credentials for the IdP.
-      operationId: publishCsrForIdentityProvider
-      parameters:
-      - name: idpId
-        in: path
-        required: true
-        schema:
-          type: string
-      - name: csrId
-        in: path
-        required: true
-        schema:
-          type: string
-      requestBody:
-        required: true
-        content:
-          application/octet-stream:
-            schema:
-              type: string
-              format: binary
-          application/x-x509-ca-cert:
-            schema:
-              oneOf:
-              - type: string
-                format: binary
-                x-okta-operationId: publishBinaryCerCertForIdentityProvider
-              - type: string
-                format: base64
-                x-okta-operationId: publishBase64CerCertForIdentityProvider
-          application/pkix-cert:
-            schema:
-              oneOf:
-              - type: string
-                format: binary
-                x-okta-operationId: publishBinaryDerCertForIdentityProvider
-              - type: string
-                format: base64
-                x-okta-operationId: publishBase64DerCertForIdentityProvider
-          application/x-pem-file:
-            schema:
-              type: string
-              format: binary
-              x-okta-operationId: publishBinaryPemCertForIdentityProvider
-      responses:
-        '201':
-          description: Created
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/JsonWebKey'
-      security:
-      - api_token: []
+#  /api/v1/idps/{idpId}/credentials/csrs/{csrId}/lifecycle/publish:
+#    post:
+#      tags:
+#      - IdentityProvider
+#      description: Update the Certificate Signing Request with a signed X.509 certificate and add it into the signing key credentials for the IdP.
+#      operationId: publishCsrForIdentityProvider
+#      parameters:
+#      - name: idpId
+#        in: path
+#        required: true
+#        schema:
+#          type: string
+#      - name: csrId
+#        in: path
+#        required: true
+#        schema:
+#          type: string
+#      requestBody:
+#        required: true
+#        content:
+#          application/octet-stream:
+#            schema:
+#              type: string
+#              format: binary
+#          application/x-x509-ca-cert:
+#            schema:
+#              oneOf:
+#              - type: string
+#                format: binary
+#                x-okta-operationId: publishBinaryCerCertForIdentityProvider
+#              - type: string
+#                format: base64
+#                x-okta-operationId: publishBase64CerCertForIdentityProvider
+#          application/pkix-cert:
+#            schema:
+#              oneOf:
+#              - type: string
+#                format: binary
+#                x-okta-operationId: publishBinaryDerCertForIdentityProvider
+#              - type: string
+#                format: base64
+#                x-okta-operationId: publishBase64DerCertForIdentityProvider
+#          application/x-pem-file:
+#            schema:
+#              type: string
+#              format: binary
+#              x-okta-operationId: publishBinaryPemCertForIdentityProvider
+#      responses:
+#        '201':
+#          description: Created
+#          content:
+#            application/json:
+#              schema:
+#                $ref: '#/components/schemas/JsonWebKey'
+#      security:
+#      - api_token: []
   /api/v1/idps/{idpId}/credentials/keys:
     get:
       tags:
