--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 
     <groupId>com.okta.sdk</groupId>
     <artifactId>okta-sdk-root</artifactId>
-    <version>7.0.0-SNAPSHOT</version>
+    <version>7.0.0</version>
     <packaging>pom</packaging>
 
     <name>Okta Java SDK</name>
@@ -73,27 +73,27 @@
             <dependency>
                 <groupId>com.okta.sdk</groupId>
                 <artifactId>okta-sdk-api</artifactId>
-                <version>7.0.0-SNAPSHOT</version>
+                <version>7.0.0</version>
             </dependency>
             <dependency>
                 <groupId>com.okta.sdk</groupId>
                 <artifactId>okta-sdk-impl</artifactId>
-                <version>7.0.0-SNAPSHOT</version>
+                <version>7.0.0</version>
             </dependency>
             <dependency>
                 <groupId>com.okta.sdk</groupId>
                 <artifactId>okta-api-swagger-templates</artifactId>
-                <version>7.0.0-SNAPSHOT</version>
+                <version>7.0.0</version>
             </dependency>
             <dependency>
                 <groupId>com.okta.sdk</groupId>
                 <artifactId>okta-sdk-httpclient</artifactId>
-                <version>7.0.0-SNAPSHOT</version>
+                <version>7.0.0</version>
             </dependency>
             <dependency>
                 <groupId>com.okta.sdk</groupId>
                 <artifactId>okta-sdk-okhttp</artifactId>
-                <version>7.0.0-SNAPSHOT</version>
+                <version>7.0.0</version>
             </dependency>
 
             <!-- Other Okta Projects -->
@@ -132,14 +132,14 @@
             <dependency>
                 <groupId>com.okta.sdk</groupId>
                 <artifactId>okta-sdk-integration-tests</artifactId>
-                <version>7.0.0-SNAPSHOT</version>
+                <version>7.0.0</version>
             </dependency>
 
             <!-- Examples -->
             <dependency>
                 <groupId>com.okta.sdk</groupId>
                 <artifactId>okta-sdk-examples-quickstart</artifactId>
-                <version>7.0.0-SNAPSHOT</version>
+                <version>7.0.0</version>
             </dependency>
 
             <!-- Logging -->
@@ -353,7 +353,7 @@
                         <dependency>
                             <groupId>com.okta.sdk</groupId>
                             <artifactId>okta-api-swagger-templates</artifactId>
-                            <version>7.0.0-SNAPSHOT</version>
+                            <version>7.0.0</version>
                         </dependency>
                     </dependencies>
                 </plugin>
@@ -446,4 +446,8 @@
             </build>
         </profile>
     </profiles>
+
+  <scm>
+    <tag>okta-sdk-root-7.0.0</tag>
+  </scm>
 </project>
