--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -64,6 +64,11 @@
             <version>29.0-jre</version>
             <scope>test</scope>
         </dependency>
+<dependency>
+    <groupId>com.squareup.okio</groupId>
+    <artifactId>okio</artifactId>
+    <version>3.0.0</version>
+</dependency>
         <dependency>
             <groupId>org.jboss.aerogear</groupId>
             <artifactId>aerogear-otp-java</artifactId>
